--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "cross-env": "^4.0.0",
     "cross-spawn": "^5.0.1",
     "css-loader": "^3.2.0",
+    "debug": "^4.1.1",
     "eslint": "^6.3.0",
     "eslint-config-standard": "^6.2.1",
     "eslint-friendly-formatter": "^2.0.7",
@@ -61,6 +62,7 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.20.0",
     "inject-loader": "^3.0.0",
+    "istanbul": "^0.4.5",
     "karma": "^4.3.0",
     "karma-coverage": "^2.0.1",
     "karma-mocha": "^1.3.0",
@@ -88,7 +90,7 @@
     "sinon": "^7.4.2",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.3.4",
+    "vue-loader": "^15.7.1",
     "vue-style-loader": "^2.0.5",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^2.6.0",
