feat: add build

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,3 +19,12 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: build app
+        run: npm run build
+      - name: deploy to github pages
+        uses: crazy-max/ghaction-github-pages@v3
+        with:
+          target_branch: gh-pages
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
