--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,6 +19,10 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: set node environment
+        uses: actions/setup-node@v3
+        width:
+          node_version: 14
       - name: install dependencies
         run: npm i
       - name: build app
