--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -21,7 +21,7 @@ jobs:
       - run: echo "🍏 This job's status is ${{ job.status }}."
       - name: set node environment
         uses: actions/setup-node@v3
-        width:
+        with:
           node_version: 14
       - name: install dependencies
         run: npm i
