--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -19,6 +19,10 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+      - name: setup python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "2.7"
       - name: set node environment
         uses: actions/setup-node@v3
         with:
